--- content/common/BUILD.gn.orig	2017-12-15 02:04:17.000000000 +0100
+++ content/common/BUILD.gn	2017-12-30 02:50:54.508676000 +0100
@@ -564,6 +564,14 @@
         "sandbox_linux/sandbox_bpf_base_policy_linux.h",
       ]
     }
+    if (is_bsd) {
+      sources -= [
+        "quarantine/quarantine_linux.cc",
+        "sandbox_linux/sandbox_linux.cc",
+        "sandbox_linux/sandbox_seccomp_bpf_linux.cc",
+        "sandbox_linux/sandbox_debug_handling_linux.cc",
+      ]
+    }
   }
 
   if (is_mac) {
