--- media/audio/BUILD.gn.orig	2017-12-15 02:04:21.000000000 +0100
+++ media/audio/BUILD.gn	2017-12-24 17:03:48.607814000 +0100
@@ -237,9 +237,19 @@
     deps += [ "//media/base/android:media_jni_headers" ]
   }
 
-  if (is_linux) {
+  if (is_linux || (is_bsd && !use_sndio)) {
     sources += [ "linux/audio_manager_linux.cc" ]
   }
+  if (use_sndio) {
+    libs += [ "sndio" ]
+    sources += [
+      "openbsd/audio_manager_openbsd.cc",
+      "sndio/sndio_input.cc",
+      "sndio/sndio_input.h",
+      "sndio/sndio_output.cc",
+      "sndio/sndio_output.h"
+    ]
+  }
 
   if (use_alsa) {
     libs += [ "asound" ]
@@ -285,7 +295,6 @@
     if (link_pulseaudio) {
       configs += [ ":libpulse" ]
     } else {
-      libs += [ "dl" ]
       deps += [ ":pulse_generate_stubs" ]
       sources += get_target_outputs(":pulse_generate_stubs")
     }
